Github issue#1217, Project card view — Added project progress component for active projects — Added support for circular progress bar — Refactored ProgressBar component to not have it always wrapped into panel component

--- a/src/projects/list/components/Projects/ProjectCard.scss
+++ b/src/projects/list/components/Projects/ProjectCard.scss
@@ -98,6 +98,15 @@
           text-transform: uppercase;
         }
       }
+
+      .project-progress {
+        display: flex;
+        .progress-text {
+          text-transform: uppercase;
+          margin-left: 10px;
+          line-height: 16px;
+        } 
+      }
     }
   }
 
